--- a/assets/ccs/style.css
+++ b/assets/ccs/style.css
@@ -176,7 +176,7 @@ html {
   margin-top: 46px;
   padding-top: 50%;
   position: relative;
-  background: url(/./assets/img/slider/slider1.jpg) top center / cover no-repeat;
+  background: url(/assets/img/slider/slider1.jpg) top center / cover no-repeat;
 }
 
 #slider .text-content {
