--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,10 @@ html {
   margin-top: 16px !important;
 }
 
+.mt-32 {
+  margin-top: 32px !important;
+}
+
 .btn {
   background-color: #000;
   color: #fff;
@@ -107,7 +111,7 @@ html {
  text-decoration: none;
  line-height: 46px;
  padding: 0 24px;
- display: inline-block;
+ display: block;
 }
 
 #nav li:hover .subnav {
@@ -155,7 +159,16 @@ html {
   background-color: #000;
 }
 
+#header .mobile-menu-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
+}
+
+#header .mobile-menu-btn,
 #header .search-btn {
+  padding: 0 21px;
   float: right;
 }
 
@@ -164,10 +177,18 @@ html {
   cursor: pointer;
 }
 
+#header .mobile-menu-btn:hover {
+  background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon{
+  color: #000;
+}
+
+#header .menu-icon,
 #header .search-icon {
   color: #fff;
   font-size: 20px;
-  padding: 0 21px;
   line-height: 46px;
 }
 
@@ -205,9 +226,12 @@ html {
 #content .content-section {
   color: #000;
   width: 800px;
+  max-width: 100%;
   padding: 64px 0 112px;
   margin-left: auto;
   margin-right: auto;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 
 #content .section-heading {
@@ -233,7 +257,7 @@ html {
 }
 
 #content .member-list {
-  margin-top: 48px;
+  margin-top: 32px;
 }
 
 #content .member-name {
@@ -285,7 +309,7 @@ html {
 
 /* Places */
 .places-list {
-    margin-top: 32px;
+    margin-top: 16px;
 }
 
 .place-img {
@@ -436,6 +460,15 @@ html {
   line-height: 1.5;
 }
 
+.contact-info a {
+  color: #101aef;
+  opacity: 0.8;
+}
+
+.contact-info a:hover {
+  opacity: 1;
+}
+
 .contact-info i[class*="ti-"] {
   width: 30px;
   display: inline-block;
@@ -480,16 +513,16 @@ html {
   color: rgba(0, 0, 0, 0.6);
   text-decoration: none;
 }
-#footer .coppyright a:hover,
+#footer .copyright a:hover,
 #footer .social-list a:hover {
   color: rgba(0, 0, 0, 0.4);
 }
 
-#footer .coppyright {
+#footer .copyright {
   margin-top: 15px;
   color: rgba(0, 0, 0, 0.6);
 }
 
-#footer .coppyright a {
+#footer .copyright a {
   color: rgba(0, 0, 0, 0.6);
 }
